# milton

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  Info.plist  LICENSE.txt  Makefile  Milton.iss  Milton.rc  README.md  TODO.md  TODO.txt  build-lin.sh  build.bat  build.sh  build_osx.sh  build_web.sh  clean.bat  deploy.bat  gen_and_build.bat  generate.sh  getstuff.bat  getstuff.sh  makefile  milton_file_format.md  milton_icon.icns  milton_icon.xcf  run.bat  setup.bat  setup.sh  setup_osx.h  setup_osx.sh  tundra.lua  x64 Native Tools Command Prompt for VS 2019.lnk
Milton_VS2015/: Milton_VS2015.sln
Milton_VS2015/HeaderlibsImpl/: HeaderlibsImpl.vcxproj  HeaderlibsImpl.vcxproj.filters
Milton_VS2015/Milton/: Milton.vcxproj  Milton.vcxproj.filters
VS2015/: MiltonPaint.sln
VS2015/HeaderlibsImpl/: HeaderlibsImpl.vcxproj  HeaderlibsImpl.vcxproj.filters
VS2015/Milton/: Milton.aps  Milton.rc  Milton.vcxproj  Milton.vcxproj.filters  resource.h
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/nuwen/milton/: MiltonActivity.java  MiltonGLSurfaceView.java  MiltonJNILib.java
android/app/src/main/jni/: android_milton.c  android_milton.cpp
android/app/src/main/res/values/: strings.xml
scripts/: build_sdl.bat  clean_unity_build.bat  metapass.bat  pre_build.sh  setup.bat  unity_build.bat  unix_build.sh  vcvars.bat  vcvars.ps1  vs_build.bat
src/: Arrays.h  DArray.h  StrokeList.cc  StrokeList.h  Vector.h  bindings.cc  bindings.h  blend.f.glsl  blend.v.glsl  blur.f.glsl  blur_average.f.glsl  canvas.c  canvas.cc  canvas.h  color.c  color.cc  color.h  common.glsl  common.h  copy_paste.cc  copy_paste.h  cord.template.c  cord.template.h  darray_test.cc  define_types.h  deque.template.h  easytab.h  easytab_impl.c  exporter_rect.f.glsl  gl.h  gl_enums.inl  gl_func_loader.cc  gl_func_loader.h  gl_functions.inl  gl_helpers.c  gl_helpers.cc  gl_helpers.h  gui.c  gui.cc  gui.h  (+119 more)
tundra/doc/: tundra-manual.html
tundra/scripts/: tundra.lua
tundra/scripts/tundra/: boot.lua  buildfile.lua  dagsave.lua  debugger.lua  decl.lua  depgraph.lua  dirwalk.lua  environment.lua  init.lua  nodegen.lua  path.lua  platform.lua  scanner.lua  selftest.lua  unitgen.lua  util.lua
tundra/scripts/tundra/host/: linux.lua  macosx.lua  windows.lua
tundra/scripts/tundra/ide/: msvc-common.lua  msvc-rules.xml  msvc100.lua  msvc110.lua  msvc120.lua  msvc140.lua  xcode3.lua  xcode5.lua  xcode7.lua
tundra/scripts/tundra/syntax/: alias.lua  bison.lua  dotnet.lua  embed_lua.lua  files.lua  flex.lua  glob.lua  install.lua  ispc.lua  lemon.lua  native.lua  osx-bundle.lua  pkgconfig.lua  qt.lua  rust-cargo.lua  testsupport.lua
tundra/scripts/tundra/test/: t_env.lua  t_path.lua
tundra/scripts/tundra/tools/: clang-osx.lua  clang.lua  dotnet.lua  gas.lua  gcc-osx.lua  gcc.lua  generic-asm.lua  generic-cpp.lua  generic-dotnet.lua  ispc.lua  mingw.lua  mono.lua  msvc-vs2008.lua  msvc-vs2010.lua  msvc-vs2012.lua  msvc-vs2013.lua  msvc-vs2015.lua  msvc-vscommon.lua  msvc-vswild.lua  msvc-winsdk.lua  msvc.lua  msvc6.lua  openwatcom.lua  qt.lua  rust.lua  vbcc.lua  win32-rc.lua  yasm.lua
